fixed spacing and added responsiveness

--- a/frontend/src/components/LandingPage/Tools/Tools.css
+++ b/frontend/src/components/LandingPage/Tools/Tools.css
@@ -1,30 +1,38 @@
 #tools-container {
-    display: flex;
-    flex-flow: row wrap;
-    justify-content: center;
+	display: flex;
+	flex-flow: row wrap;
+	justify-content: center;
+	margin: 0px 12.5%;
 }
 
 #header {
-    text-align: center;
-    padding: 10px 0px 10px 0px;
+	text-align: center;
+	padding: 10px 0px;
 }
 
 .card {
-    flex: 0 1 26%;
+	flex: 0 1 33%;
+	/* padding: 5px; */
 }
 
 .card a {
-    text-decoration: none !important;
+	text-decoration: none !important;
 }
 
 .tool-name {
-    font-size: 40px;
-    color: #61DBFB;
-    text-align: center;
+	font-size: 40px;
+	color: #61dbfb;
+	text-align: center;
 }
 
 .tool-description {
-    font-size: 20px;
-    color: #61DBFB;
-    text-align: center;
+	font-size: 20px;
+	color: #61dbfb;
+	text-align: center;
+}
+
+@media (max-width: 768px) {
+	.card {
+		flex: 0 1 100%;
+	}
 }
